# pymatgen-analysis-defects

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  requirements-ci.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tutorials.html
.doctrees/: environment.pickle  genindex.doctree  index.doctree  intro.doctree  tutorials.doctree
.doctrees/content/: defining-defects.doctree  nonradiative.doctree  quickstart.doctree
.doctrees/reference/: ccd.doctree  core.doctree  corrections.doctree  finder.doctree  generators.doctree  root.doctree  thermo.doctree  utils.doctree
.doctrees/tutorials/: 1-quickstart.doctree  3-nonradiative-capture.doctree
.github/: dependabot.yml
.github/workflows/: docs.yml  paper.yml  python-publish.yml  testing.yml  update-precommit.yml
.jupyter_cache/: global.db
.jupyter_cache/executed/1dd7e8f44bce3d9139fbb10539539f1e/: base.ipynb
.jupyter_cache/executed/55b2828e4fba2a89842f756d8be026a1/: base.ipynb
.jupyter_cache/executed/d58737475ff6a601b93b05f5cb3cd151/: base.ipynb
_modules/: index.html
_modules/pymatgen/analysis/defects/: ccd.html  core.html  corrections.html  finder.html  generators.html  thermo.html  utils.html
_sources/: index.rst.txt  intro.md  tutorials.rst.txt
_sources/api_ref/: pymatgen.analysis.defects.ccd.rst  pymatgen.analysis.defects.core.rst  pymatgen.analysis.defects.finder.rst  pymatgen.analysis.defects.generators.rst  pymatgen.analysis.defects.recombination.rst  pymatgen.analysis.defects.supercells.rst  pymatgen.analysis.defects.thermo.rst  pymatgen.analysis.defects.utils.rst
_sources/content/: defect-finder.ipynb  defect_finder.ipynb  defining-defects.ipynb  formation-energy.ipynb  freysoldt-correction.ipynb  nonradiative.ipynb  photo-conduct.ipynb  quickstart.ipynb  references.md
_sources/reference/: ccd.rst.txt  core.rst.txt  corrections.rst.txt  finder.rst.txt  generators.rst.txt  root.rst.txt  utils.rst.txt
_sources/tutorials/: 3-nonradiative-capture.nblink.txt
_templates/autosummary/: base.html  class.html  function.html  module.html
api_ref/: index.html  pymatgen.analysis.defects.ccd.html  pymatgen.analysis.defects.core.html  pymatgen.analysis.defects.finder.html  pymatgen.analysis.defects.generators.html  pymatgen.analysis.defects.recombination.html  pymatgen.analysis.defects.supercells.html  pymatgen.analysis.defects.thermo.html  pymatgen.analysis.defects.utils.html
content/: defect-finder.html  defect_finder.html  defining-defects.html  formation-energy.html  freysoldt-correction.html  freysoldt_correction.html  nonradiative.html  photo-conduct.html  quickstart.html  references.html
dash_app/: chempot_selection.py  formation_en_Mn_Ga.json
docs/: _config.yml  _toc.yml
docs/admin/: version-releases.md
docs/content/: quickstart.ipynb
docs/joss/: paper.md
docs/source/: _config.yml  _toc.yml  conf.py  index.rst  modules.rst  references.bib  tutorials.rst
docs/source/api_ref/: index.rst
docs/source/content/: defect-finder.ipynb  defect_finder.ipynb  defining-defects.ipynb  formation-energy.ipynb  freysoldt-correction.ipynb  freysoldt_correction.ipynb  nonradiative.ipynb  photo-conduct.ipynb  quickstart.ipynb
docs/source/reference/: ccd.rst  core.rst  corrections.rst  finder.rst  generators.rst  root.rst  thermo.rst  utils.rst
docs/source/tutorials/: 1-quickstart.nblink  2-defining-defects.nblink
docs/src/: changelog.rst  conf.py  contributing.rst  index.rst
html/: genindex.html  intro.html  search.html  searchindex.js
html/_sources/content/: nonradiative.ipynb
html/content/: defining-defects.html  nonradiative.html
jupyter_execute/content/: defining-defects.ipynb  defining-defects.py  nonradiative.ipynb  nonradiative.py  quickstart.ipynb  quickstart.py
paper/: paper.bib  paper.md
pymatgen/analysis/defect/: __init__.py  ccd.py  core.py  corrections.py  finder.py  generators.py  supercells.py  thermo.py  utils.py
pymatgen/analysis/defects/: __init__.py  _version.py  ccd.py  constants.py  core.py  corrections.py  finder.py  generators.py  nonrad.py  recombination.py  supercells.py  thermo.py  utils.py
pymatgen/analysis/defects/corrections/: __init__.py  base.py  freysoldt.py  kumagai.py
pymatgen/analysis/defects/plotting/: optical.py  optics.py  phases.py  thermo.py  utils.py
pymatgen/analysis/defects2/: __init__.py  core.py  corrections.py  finder.py  generators.py  thermo.py
reference/: ccd.html  core.html  corrections.html  finder.html  generators.html  root.html  thermo.html  utils.html
source/: conf.py  index.rst
tests/: conftest.py  pyproject.toml  test_ccd.py  test_core.py  test_corrections.py  test_finder.py  test_generators.py  test_nonrad.py  test_recombination.py  test_supercells.py  test_thermo.py  test_utils.py
tests/plotting/: test_thermo.py
tests/test_files/: GaN.vasp  Ga_Mg_N.json  Si-O_structs.json  stable_entries_Mg_Ga_N.json
tests/test_files/V_Ga/ccd_-1_0/: .PROCAR.1.gz.swp
tests/test_files/v_Ga/ccd_-1_0/0/: PROCAR
tests/test_files/v_Ga/ccd_-1_0/1/: PROCAR
tests/test_files/v_Ga/ccd_-1_0/2/: PROCAR
tests/test_files/v_Ga/ccd_-1_0/optics/: PROCAR
tests/test_files/v_Ga/ccd_0_-1/0/: PROCAR
tests/test_files/v_Ga/ccd_0_-1/1/: PROCAR
tests/test_files/v_Ga/ccd_0_-1/2/: PROCAR
tests/test_files/v_Ga/ccd_0_-1/optics/: PROCAR
tests/test_files/v_Ga/ccd_0_-1/wswqs/: README
tests/test_files/v_N_GaN/: corr.out  corr_align.out
tests/test_files/v_N_GaN/q=-1/: corr.out  corr_align.out
tests/test_files/v_N_GaN/q=0/: corr.out  corr_align.out
tests/test_files/v_N_GaN/q=1/: corr.out  corr_align.out
tests/test_files/v_N_GaN/q=2/: corr.out  corr_align.out
tutorials/: 1-quickstart.html  1-quickstart.ipynb  2-defining-defects.ipynb  3-nonradiative-capture.html  3-nonradiative-capture.ipynb  4-radiative-capture.ipynb
