[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 42", "versioningit ~= 1.0", "wheel"]

[project]
authors = [{ name = "Jimmy-Xuan Shen", email = "jmmshn@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Topic :: Other/Nonlisted Topic",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "pymatgen",
  "scikit-image>=0.19.3",
  "numpy"
]
description = "Pymatgen extension for defects analysis"
dynamic = ["version"]
keywords = ["high-throughput", "automated", "dft", "defects"]
license = { text = "modified BSD" }
name = "pymatgen-analysis-defects"
readme = "README.rst"
requires-python = '>=3.9'

[project.optional-dependencies]
finder = ["dscribe>=2.0.0"]
dev = ["pre-commit>=2.12.1"]
docs = [
  "jupyter-book>=0.13.1",
]
pydefect = ["pydefect>=0.6.2"]

strict = [
  "pymatgen==2023.10.11",
  "dscribe==2.1.0",
  "scikit-image==0.21.0",
]

tests = ["pytest==7.4.2", "pytest-cov==4.1.0", "nbmake==1.4.6"]


[tool.setuptools.dynamic]
readme = { file = ["README.rst"] }

[project.urls]
documentation = "https://materialsproject.github.io/pymatgen-analysis-defects/"
homepage = "https://materialsproject.github.io/pymatgen-analysis-defects/"
repository = "https://github.com/materialsproject/pymatgen-analysis-defects"

[tool.setuptools.packages.find]
exclude = ["tests"]
where = ["./"]

[tool.versioningit.vcs]
default-tag = "0.0.1"
method = "git"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.blacken-docs]
line-length = 88

[tool.flake8]
extend-ignore = "E203, W503, E501, F401, RST21"
max-line-length = 120
max-doc-length = 120
min-python-version = "3.9.0"

[tool.mypy]
ignore_missing_imports = true
no_strict_optional = true

[tool.coverage.run]
branch = true
include = ["pymatgen/*"]
parallel = true

[tool.coverage.paths]
source = ["pymatgen/"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pydocstyle]
convention = 'google'
match = '^pymatgen/(?!_).*\.py'
inherit = false
add-ignore = "D107, "

[tool.autoflake]
in-place = true
remove-unused-variables = true
remove-all-unused-imports = true
expand-star-imports = true
ignore-init-module-imports = true

[tool.ruff]
src = ["pymatgen", "tests"]

line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`).
select = ["E4", "E7", "E9", "F", "D", "I001", "TCH"]
ignore = ["E203", "E501", "F401"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL", "TCH"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
strict=true
quote-annotations = true

